Fix Room models and stabilize UI and build configuration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -10,21 +9,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppShop" >
+        android:theme="@style/Theme.AppShop">
         <activity
             android:name="com.example.appshop.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppShop"
-            tools:ignore="MissingClass">
+            android:theme="@style/Theme.AppShop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.appshop.ui.activities.CartActivity"/>
-        <activity android:name="com.example.appshop.ui.activities.ItemActivity"/>
+        <activity
+            android:name="com.example.appshop.ui.activities.CartActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.example.appshop.ui.activities.ItemActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
