--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 android {
+    namespace "com.example.appshop"
     compileSdk 34
 
     defaultConfig {
@@ -14,8 +15,6 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
-    namespace "com.example.appshop"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -32,7 +31,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
+    // Kotlin stdlib подключается автоматически, можно убрать:
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2' // <-- добавил
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
 
     implementation "androidx.room:room-runtime:2.6.1"
@@ -50,4 +52,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     kapt 'com.github.bumptech.glide:compiler:4.16.0'
+
+    // Опционально: Jetpack Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
 }
